--- a/styles/chat.less
+++ b/styles/chat.less
@@ -50,6 +50,14 @@
     }
     .message-content {
       .dice-roll.penombre {
+        .participate-container {
+          display: flex;
+          justify-content: space-between;
+          button {
+            flex: 1;
+            margin: 0 4px;
+          }
+        }
         .dice-result {
           &.expanded {
             .dice-tooltip {
