--- a/templates/chat/harmonique-roll.hbs
+++ b/templates/chat/harmonique-roll.hbs
@@ -1,17 +1,31 @@
-{{log 'chat harmonique-roll' this}}
+{{log "chat harmonique-roll" this}}
 <div class="dice-roll penombre">
-  Jet d'harmonique {{localize (concat 'PENOMBRE.ui.' harmonique)}} <br>
-  {{#if hasDifficulte}}
-    Succès : {{nbSucces}} / Difficulté : {{difficulte}}
+  Jet d'harmonique
+  {{localize (concat "PENOMBRE.ui." harmonique)}}
+  <br />
+  {{#if actionCollegiale}}
+    Action collégiale {{#if isActionPrincipale}}(principale){{else}}(liée){{/if}}<br />
+    {{#if peutParticiper}}
+      <div class="participate-container">
+        <button class="participate-yes hidden">Participer</button>
+        <button class="participate-no hidden">Ne pas participer</button>
+      </div>
+    {{/if}}
+  {{/if}}
+  {{#if (and isActionPrincipale hasDifficulte)}}
+    Succès : {{nbSucces}} {{#if hasAutresSucces}}/ Autres succès : {{#each autresSucces}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/each}}{{/if}} <br>
+    Total : {{totalSucces}} <br>
+    Difficulté : {{difficulte}} <br>
     {{#if isSuccess}}
-        C'est une réussite !
+      C'est une réussite !
     {{else}}
-        C'est un échec !
+      C'est un échec !
     {{/if}}
   {{else}}
-    Succès : {{nbSucces}}
+    Succès : {{nbSucces}} {{#if hasAutresSucces}}/ Autres succès : {{#each autresSucces}}<span data-tooltip="{{this.actor}}">{{this.nbSucces}}</span>{{#if @last}}{{else}}, {{/if}}{{/each}}{{/if}} <br>
+    Total : {{totalSucces}}
   {{/if}}
-  {{#if icon}} 
+  {{#if icon}}
     <span class="part-method" data-tooltip aria-label="{{localize method}}">
       {{{icon}}}
     </span>
