--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -203,6 +203,20 @@ body {
               .col-1-2 {
                 float: left;
                 width: 212px;
+
+                div {
+                  display: table;
+
+                  span {
+                    float: none;
+                    clear: both;
+                    height: 15px;
+
+                    &.description {
+                      height: auto;
+                    }
+                  }
+                }
               }
 
               .col-2-2 {
