Ca s'affiche (les nouvelles fiches sont en bordel)

--- a/templates/action.hbs
+++ b/templates/action.hbs
@@ -1,4 +1,4 @@
-{{!log "description" this}}
+{{!log "action" this}}
 <section class="standard-form">
     <div class="logo-frame">
         <img class="logo-img" src="{{document.img}}" data-action="editImage" data-tooltip="{{document.name}}" />
