--- a/templates/adversaire/adversaire.hbs
+++ b/templates/adversaire/adversaire.hbs
@@ -8,13 +8,10 @@
     <!-- Description -->
     {{> "systems/penombre/templates/adversaire/partials/description.hbs" }}
 
-    <!-- Actions adverses -->
-    {{> "systems/penombre/templates/adversaire/partials/actions-adverses.hbs" }}
+    <!-- Actions -->
+    {{> "systems/penombre/templates/adversaire/partials/actions.hbs" }}
 
-        <!-- Actions de dissonance -->
-    {{> "systems/penombre/templates/adversaire/partials/actions-de-dissonance.hbs" }}
-
-        <!-- Intrigues -->
+    <!-- Intrigues -->
     {{> "systems/penombre/templates/adversaire/partials/intrigues.hbs" }}
   </div>
  
