--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -3,5 +3,7 @@
       {{formGroup systemFields.adversite.max value=systemSource.adversite.max localize=true}}
       {{formGroup systemFields.adversite.valeur value=systemSource.adversite.valeur localize=true}}
       {{formGroup systemFields.resilience value=systemSource.resilience localize=true disabled=true}}
-      {{formGroup systemFields.dissonance value=systemSource.dissonance localize=true}}
+      {{formGroup systemFields.dissonance.max value=systemSource.dissonance.max localize=true}}
+      {{formGroup systemFields.dissonance.valeur value=systemSource.dissonance.valeur localize=true}}
+      {{formGroup systemFields.dissonance.harmonique value=systemSource.dissonance.harmonique localize=true}}
 </div>
