--- a/templates/adversaire/partials/description.hbs
+++ b/templates/adversaire/partials/description.hbs
@@ -4,30 +4,33 @@
         <div class="description absolue">
             <table class="item-list centpourcent">
                 <tr class="centpourcent">
-                    <th class="item-coche">
-                    </th>
+                    {{#if unlocked}}
                     <th>
                         {{ localize 'PENOMBRE.ui.nom' }}
                     </th>
-                    <th class="item-controls">
-                        {{#if unlocked}}
-                            <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.create' item='une description' }}" data-action="create" data-type="description"><i class="fas fa-plus"></i></a>
-                        {{/if}}
+                    <th>
+                        {{ localize 'PENOMBRE.ui.description' }}
                     </th>
-                </tr>
-                {{#each descriptions as |item id|}}
-                <tr class="item draggable" data-item-id="{{item._id}}">
-                    <td>
-                        <span class="item-name" data-tooltip="{{{item.system.description}}}">{{item.name}}</span>
-                    </td>
-                    <td class="item-controls">
-                    {{#if ../unlocked}}
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.edit' }}" data-action="edit" data-item-id="{{item._id}}"><i class="fas fa-edit"></i></a>
-                        <a class="item-control" data-tooltip="{{ localize 'PENOMBRE.ui.delete' }}" data-action="delete" data-item-id="{{item._id}}"><i class="fas fa-trash"></i></a>
+                    {{else}}
+                    <th>
+                        {{ localize 'PENOMBRE.ui.nom' }}
+                    </th>
                     {{/if}}
-                    </td>
                 </tr>
-                {{/each}}
+                <tr>
+                    {{#if unlocked}}
+                    <td>
+                        <span class="name" data-tooltip="{{{item.system.adversite.description}}}">{{item.name}}</span>
+                    </td>
+                    <td>
+                        {{formGroup systemFields.adversite.description value=systemSource.adversite.description localize=true}}
+                    </td>
+                    {{else}}
+                    <td>
+                        <span class="name-complete">{{system.name}}{{system.adversite.description}}</span>
+                    </td>
+                    {{/if}}
+                </tr>
             </table>
         </div>
     </div>
