--- a/styles/items.less
+++ b/styles/items.less
@@ -53,4 +53,36 @@
       }
     }
   }
+
+  &.intrigue {
+    .intrigue-content .standard-form {
+      .logo-frame {
+        display: flex;
+        justify-content: space-between;
+
+        .logo-img {
+          width: 80px;
+        }
+        .name {
+          width: calc(100% - 90px);
+        }
+      }
+    }
+  }
+
+  &.action {
+    .action-content .standard-form {
+      .logo-frame {
+        display: flex;
+        justify-content: space-between;
+
+        .logo-img {
+          width: 80px;
+        }
+        .name {
+          width: calc(100% - 90px);
+        }
+      }
+    }
+  }
 }
