--- a/templates/adversaire/partials/intrigues.hbs
+++ b/templates/adversaire/partials/intrigues.hbs
@@ -1,11 +1,11 @@
 {{!log "AdversaireSheet - Partials - Intrigues" this }}
 <div class="adversaire-intrigues">
-    <span class="titre-section-intrigues">{{localize "PENOMBRE.ui.description"}}</span>
+    <span class="titre-section-intrigues"></span>
         <div class="intrigues absolue">
             <table class="item-list centpourcent">
                 <tr class="centpourcent">
                     <th>
-                        {{ localize 'PENOMBRE.ui.nom' }}
+                        {{ localize 'PENOMBRE.ui.intrigues' }}
                     </th>
                     <th class="item-controls">
                         {{#if unlocked}}
