--- a/templates/adversaire/partials/description.hbs
+++ b/templates/adversaire/partials/description.hbs
@@ -1,37 +1,33 @@
 {{!log "AdversaireSheet - Partials - Description" this }}
 <div class="adversaire-description">
-    <span class="titre-section-description">{{localize "PENOMBRE.ui.description"}}</span>
-        <div class="description absolue">
-            <table class="item-list centpourcent">
-                <tr class="centpourcent">
-                    {{#if unlocked}}
-                    <th>
-                        {{ localize 'PENOMBRE.ui.nom' }}
-                    </th>
-                    <th>
-                        {{ localize 'PENOMBRE.ui.description' }}
-                    </th>
-                    {{else}}
-                    <th>
-                        {{ localize 'PENOMBRE.ui.nom' }}
-                    </th>
-                    {{/if}}
-                </tr>
-                <tr>
-                    {{#if unlocked}}
-                    <td>
-                        <span class="name" data-tooltip="{{{item.system.adversite.description}}}">{{item.name}}</span>
-                    </td>
-                    <td>
-                        {{formGroup systemFields.adversite.description value=systemSource.adversite.description localize=true}}
-                    </td>
-                    {{else}}
-                    <td>
-                        <span class="name-complete">{{system.name}}{{system.adversite.description}}</span>
-                    </td>
-                    {{/if}}
-                </tr>
-            </table>
-        </div>
-    </div>
+    <table class="centpourcent">
+        <tr class="centpourcent">
+            {{#if unlocked}}
+            <th>
+                {{ localize 'PENOMBRE.ui.nom' }}
+            </th>
+            <th>
+                {{ localize 'PENOMBRE.Adversaire.FIELDS.description.valeur.label' }}
+            </th>
+            {{else}}
+            <th>
+                {{ localize 'PENOMBRE.ui.nom' }}
+            </th>
+            {{/if}}
+        </tr>
+        <tr>
+            {{#if unlocked}}
+            <td>
+                <span class="name" data-tooltip="{{{system.description.valeur}}}">{{system.name}}</span>
+            </td>
+            <td>
+                {{formGroup systemFields.description.valeur value=systemSource.description.valeur localize=true}}
+            </td>
+            {{else}}
+            <td>
+                <span class="name-complete">{{system.name}}{{system.description.valeur}}</span>
+            </td>
+            {{/if}}
+        </tr>
+    </table>
 </div>
