--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -1,9 +1,16 @@
 <div class="adversaire-personnage">
-      {{formGroup fields.name value=document.name localize=true}}
-      {{formGroup systemFields.adversite.max value=systemSource.adversite.max localize=true}}
-      {{formGroup systemFields.adversite.valeur value=systemSource.adversite.valeur localize=true}}
-      {{formGroup systemFields.resilience value=systemSource.resilience localize=true disabled=true}}
-      {{formGroup systemFields.dissonance.max value=systemSource.dissonance.max localize=true}}
-      {{formGroup systemFields.dissonance.valeur value=systemSource.dissonance.valeur localize=true}}
-      {{formGroup systemFields.dissonance.harmonique value=systemSource.dissonance.harmonique localize=true}}
+    <div class="logo-frame">
+            <img class="logo-img" src="{{document.img}}" {{#if unlocked}}data-action="editImage"{{/if}} data-tooltip="{{document.name}}"/>
+    </div>
+    <div class="data">
+            {{formGroup fields.name value=document.name localize=true disabled=locked}}
+
+            {{formGroup systemFields.adversite.max value=systemSource.adversite.max localize=true}}
+            {{formGroup systemFields.adversite.valeur value=systemSource.adversite.valeur localize=true}}
+            {{formGroup systemFields.resilience.max value=systemSource.resilience.max localize=true}}
+            {{formGroup systemFields.resilience.valeur value=systemSource.resilience.valeur localize=true}}
+            {{formGroup systemFields.dissonance.harmonique value=systemSource.dissonance.harmonique localize=true}}
+            {{formGroup systemFields.dissonance.max value=systemSource.dissonance.max localize=true}}
+            {{formGroup systemFields.dissonance.valeur value=systemSource.dissonance.valeur localize=true}}
+      </div>
 </div>
