--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -4,13 +4,42 @@
     </div>
     <div class="data">
             {{formGroup fields.name value=document.name localize=true disabled=locked}}
-
-            {{formGroup systemFields.adversite.field.max value=systemSource.adversite.max localize=true}}
-            {{formGroup systemFields.adversite.field.valeur value=systemSource.adversite.valeur localize=true}}
-            {{formGroup systemFields.resilience.field.max value=systemSource.resilience.max localize=true}}
-            {{formGroup systemFields.resilience.field.valeur value=systemSource.resilience.valeur localize=true}}
-            {{formGroup systemFields.dissonance.field.harmonique value=systemSource.dissonance.harmonique localize=true}}
-            {{formGroup systemFields.dissonance.field.max value=systemSource.dissonance.max localize=true}}
-            {{selectOptions harmoniquesChoices value=systemSource.dissonance.valeur localize=true}}
+                <table class="centpourcent">
+                        <tr class="centpourcent">
+                        {{#if unlocked}}
+                        <th>
+                                {{ localize 'PENOMBRE.ui.nom' }}
+                        </th>
+                        <th>
+                                {{ localize 'PENOMBRE.Adversaire.FIELDS.description.label' }}
+                        </th>
+                        {{else}}
+                        <th>
+                                {{ localize 'PENOMBRE.ui.nom' }}
+                        </th>
+                        {{/if}}
+                        </tr>
+                        <tr>
+                        {{#if unlocked}}
+                        <td>
+                                <span class="name" data-tooltip="{{{system.description}}}">{{document.name}}</span>
+                        </td>
+                        <td>
+                                {{formGroup systemFields.description value=systemSource.description localize=true}}
+                        </td>
+                        {{else}}
+                        <td>
+                                <span class="name-complete">{{document.name}}{{system.description}}</span>
+                        </td>
+                        {{/if}}
+                        </tr>
+                </table>
+            {{formGroup systemFields.adversite.fields.max value=systemSource.adversite.max localize=true}}
+            {{formGroup systemFields.adversite.fields.valeur value=systemSource.adversite.valeur localize=true}}
+            {{formGroup systemFields.resilience.fields.max value=systemSource.resilience.max localize=true disabled=true}}
+            {{formGroup systemFields.resilience.fields.valeur value=systemSource.resilience.valeur localize=true}}
+            {{formGroup systemFields.dissonance.fields.max value=systemSource.dissonance.max localize=true}}
+            {{formGroup systemFields.dissonance.fields.valeur value=systemSource.dissonance.valeur localize=true}}
+            {{formGroup systemFields.dissonance.fields.harmonique value=systemSource.dissonance.harmonique localize=true}}
       </div>
 </div>
