Description à la place de Nom quand la fiche est verrouillée

--- a/templates/adversaire/partials/personnage.hbs
+++ b/templates/adversaire/partials/personnage.hbs
@@ -15,7 +15,7 @@
                                 </th>
                         {{else}}
                                 <th>
-                                        {{ localize 'PENOMBRE.ui.nom' }}
+                                        {{ localize 'PENOMBRE.Adversaire.FIELDS.description.label' }}
                                 </th>
                         {{/if}}
                         </tr>
